--- a/NER_using_embedding.ipynb
+++ b/NER_using_embedding.ipynb
@@ -34,62 +34,11 @@
       },
       "source": [
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "#keras 2.1.6"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5lWwg6pkUgmk",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 349
-        },
-        "outputId": "53fee5ee-0d5b-440c-b10e-4d9032c8aeaf"
-      },
-      "source": [
-        "!pip install keras==2.1.6 "
-      ],
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting keras==2.1.6\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/54/e8/eaff7a09349ae9bd40d3ebaf028b49f5e2392c771f294910f75bb608b241/Keras-2.1.6-py2.py3-none-any.whl (339kB)\n",
-            "\u001b[K     |████████████████████████████████| 348kB 2.8MB/s \n",
-            "\u001b[?25hRequirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras==2.1.6) (2.8.0)\n",
-            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from keras==2.1.6) (1.12.0)\n",
-            "Requirement already satisfied: scipy>=0.14 in /usr/local/lib/python3.6/dist-packages (from keras==2.1.6) (1.3.0)\n",
-            "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.6/dist-packages (from keras==2.1.6) (1.16.3)\n",
-            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.6/dist-packages (from keras==2.1.6) (3.13)\n",
-            "Installing collected packages: keras\n",
-            "  Found existing installation: Keras 2.2.4\n",
-            "    Uninstalling Keras-2.2.4:\n",
-            "      Successfully uninstalled Keras-2.2.4\n",
-            "Successfully installed keras-2.1.6\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "keras"
-                ]
-              }
-            }
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -274,274 +223,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Xxl_HyOzLBMK",
-        "colab_type": "code",
-        "outputId": "ccdd9693-deb8-4186-dab6-ebcc6cdf8562",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 4160
-        }
-      },
-      "source": [
-        "sentences[:10]"
-      ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[('Thousands', 'NNS', 'O'),\n",
-              "  ('of', 'IN', 'O'),\n",
-              "  ('demonstrators', 'NNS', 'O'),\n",
-              "  ('have', 'VBP', 'O'),\n",
-              "  ('marched', 'VBN', 'O'),\n",
-              "  ('through', 'IN', 'O'),\n",
-              "  ('London', 'NNP', 'B-geo'),\n",
-              "  ('to', 'TO', 'O'),\n",
-              "  ('protest', 'VB', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('war', 'NN', 'O'),\n",
-              "  ('in', 'IN', 'O'),\n",
-              "  ('Iraq', 'NNP', 'B-geo'),\n",
-              "  ('and', 'CC', 'O'),\n",
-              "  ('demand', 'VB', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('withdrawal', 'NN', 'O'),\n",
-              "  ('of', 'IN', 'O'),\n",
-              "  ('British', 'JJ', 'B-gpe'),\n",
-              "  ('troops', 'NNS', 'O'),\n",
-              "  ('from', 'IN', 'O'),\n",
-              "  ('that', 'DT', 'O'),\n",
-              "  ('country', 'NN', 'O'),\n",
-              "  ('.', '.', 'O')],\n",
-              " [('Iranian', 'JJ', 'B-gpe'),\n",
-              "  ('officials', 'NNS', 'O'),\n",
-              "  ('say', 'VBP', 'O'),\n",
-              "  ('they', 'PRP', 'O'),\n",
-              "  ('expect', 'VBP', 'O'),\n",
-              "  ('to', 'TO', 'O'),\n",
-              "  ('get', 'VB', 'O'),\n",
-              "  ('access', 'NN', 'O'),\n",
-              "  ('to', 'TO', 'O'),\n",
-              "  ('sealed', 'JJ', 'O'),\n",
-              "  ('sensitive', 'JJ', 'O'),\n",
-              "  ('parts', 'NNS', 'O'),\n",
-              "  ('of', 'IN', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('plant', 'NN', 'O'),\n",
-              "  ('Wednesday', 'NNP', 'B-tim'),\n",
-              "  (',', ',', 'O'),\n",
-              "  ('after', 'IN', 'O'),\n",
-              "  ('an', 'DT', 'O'),\n",
-              "  ('IAEA', 'NNP', 'B-org'),\n",
-              "  ('surveillance', 'NN', 'O'),\n",
-              "  ('system', 'NN', 'O'),\n",
-              "  ('begins', 'VBZ', 'O'),\n",
-              "  ('functioning', 'VBG', 'O'),\n",
-              "  ('.', '.', 'O')],\n",
-              " [('Helicopter', 'NN', 'O'),\n",
-              "  ('gunships', 'NNS', 'O'),\n",
-              "  ('Saturday', 'NNP', 'B-tim'),\n",
-              "  ('pounded', 'VBD', 'O'),\n",
-              "  ('militant', 'JJ', 'O'),\n",
-              "  ('hideouts', 'NNS', 'O'),\n",
-              "  ('in', 'IN', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('Orakzai', 'NNP', 'B-geo'),\n",
-              "  ('tribal', 'JJ', 'O'),\n",
-              "  ('region', 'NN', 'O'),\n",
-              "  (',', ',', 'O'),\n",
-              "  ('where', 'WRB', 'O'),\n",
-              "  ('many', 'JJ', 'O'),\n",
-              "  ('Taliban', 'NNP', 'B-org'),\n",
-              "  ('militants', 'NNS', 'O'),\n",
-              "  ('are', 'VBP', 'O'),\n",
-              "  ('believed', 'VBN', 'O'),\n",
-              "  ('to', 'TO', 'O'),\n",
-              "  ('have', 'VB', 'O'),\n",
-              "  ('fled', 'VBN', 'O'),\n",
-              "  ('to', 'TO', 'O'),\n",
-              "  ('avoid', 'VB', 'O'),\n",
-              "  ('an', 'DT', 'O'),\n",
-              "  ('earlier', 'JJR', 'O'),\n",
-              "  ('military', 'JJ', 'O'),\n",
-              "  ('offensive', 'NN', 'O'),\n",
-              "  ('in', 'IN', 'O'),\n",
-              "  ('nearby', 'JJ', 'O'),\n",
-              "  ('South', 'NNP', 'B-geo'),\n",
-              "  ('Waziristan', 'NNP', 'I-geo'),\n",
-              "  ('.', '.', 'O')],\n",
-              " [('They', 'PRP', 'O'),\n",
-              "  ('left', 'VBD', 'O'),\n",
-              "  ('after', 'IN', 'O'),\n",
-              "  ('a', 'DT', 'O'),\n",
-              "  ('tense', 'NN', 'O'),\n",
-              "  ('hour-long', 'JJ', 'O'),\n",
-              "  ('standoff', 'NN', 'O'),\n",
-              "  ('with', 'IN', 'O'),\n",
-              "  ('riot', 'NN', 'O'),\n",
-              "  ('police', 'NNS', 'O'),\n",
-              "  ('.', '.', 'O')],\n",
-              " [('U.N.', 'NNP', 'B-geo'),\n",
-              "  ('relief', 'NN', 'O'),\n",
-              "  ('coordinator', 'NN', 'O'),\n",
-              "  ('Jan', 'NNP', 'B-per'),\n",
-              "  ('Egeland', 'NNP', 'I-per'),\n",
-              "  ('said', 'VBD', 'O'),\n",
-              "  ('Sunday', 'NNP', 'B-tim'),\n",
-              "  (',', ',', 'O'),\n",
-              "  ('U.S.', 'NNP', 'B-geo'),\n",
-              "  (',', ',', 'O'),\n",
-              "  ('Indonesian', 'JJ', 'B-gpe'),\n",
-              "  ('and', 'CC', 'O'),\n",
-              "  ('Australian', 'JJ', 'B-gpe'),\n",
-              "  ('military', 'JJ', 'O'),\n",
-              "  ('helicopters', 'NNS', 'O'),\n",
-              "  ('are', 'VBP', 'O'),\n",
-              "  ('ferrying', 'VBG', 'O'),\n",
-              "  ('out', 'RP', 'O'),\n",
-              "  ('food', 'NN', 'O'),\n",
-              "  ('and', 'CC', 'O'),\n",
-              "  ('supplies', 'NNS', 'O'),\n",
-              "  ('to', 'TO', 'O'),\n",
-              "  ('remote', 'VB', 'O'),\n",
-              "  ('areas', 'NNS', 'O'),\n",
-              "  ('of', 'IN', 'O'),\n",
-              "  ('western', 'JJ', 'O'),\n",
-              "  ('Aceh', 'NNP', 'B-geo'),\n",
-              "  ('province', 'NN', 'O'),\n",
-              "  ('that', 'IN', 'O'),\n",
-              "  ('ground', 'NN', 'O'),\n",
-              "  ('crews', 'NNS', 'O'),\n",
-              "  ('can', 'MD', 'O'),\n",
-              "  ('not', 'RB', 'O'),\n",
-              "  ('reach', 'VB', 'O'),\n",
-              "  ('.', '.', 'O')],\n",
-              " [('Mr.', 'NNP', 'B-per'),\n",
-              "  ('Egeland', 'NNP', 'I-per'),\n",
-              "  ('said', 'VBD', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('latest', 'JJS', 'O'),\n",
-              "  ('figures', 'NNS', 'O'),\n",
-              "  ('show', 'VBP', 'O'),\n",
-              "  ('1.8', 'CD', 'O'),\n",
-              "  ('million', 'CD', 'O'),\n",
-              "  ('people', 'NNS', 'O'),\n",
-              "  ('are', 'VBP', 'O'),\n",
-              "  ('in', 'IN', 'O'),\n",
-              "  ('need', 'NN', 'O'),\n",
-              "  ('of', 'IN', 'O'),\n",
-              "  ('food', 'NN', 'O'),\n",
-              "  ('assistance', 'NN', 'O'),\n",
-              "  ('-', ':', 'O'),\n",
-              "  ('with', 'IN', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('need', 'NN', 'O'),\n",
-              "  ('greatest', 'JJS', 'O'),\n",
-              "  ('in', 'IN', 'O'),\n",
-              "  ('Indonesia', 'NNP', 'B-tim'),\n",
-              "  (',', ',', 'O'),\n",
-              "  ('Sri', 'NNP', 'B-per'),\n",
-              "  ('Lanka', 'NNP', 'B-gpe'),\n",
-              "  (',', ',', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('Maldives', 'NNP', 'B-geo'),\n",
-              "  ('and', 'CC', 'O'),\n",
-              "  ('India', 'NNP', 'B-geo'),\n",
-              "  ('.', '.', 'O')],\n",
-              " [('He', 'PRP', 'O'),\n",
-              "  ('said', 'VBD', 'O'),\n",
-              "  ('last', 'JJ', 'O'),\n",
-              "  ('week', 'NN', 'O'),\n",
-              "  (\"'s\", 'POS', 'O'),\n",
-              "  ('tsunami', 'NN', 'O'),\n",
-              "  ('and', 'CC', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('massive', 'JJ', 'O'),\n",
-              "  ('underwater', 'NN', 'O'),\n",
-              "  ('earthquake', 'NN', 'O'),\n",
-              "  ('that', 'WDT', 'O'),\n",
-              "  ('triggered', 'VBD', 'O'),\n",
-              "  ('it', 'PRP', 'O'),\n",
-              "  ('has', 'VBZ', 'O'),\n",
-              "  ('affected', 'VBN', 'O'),\n",
-              "  ('millions', 'NNS', 'O'),\n",
-              "  ('in', 'IN', 'O'),\n",
-              "  ('Asia', 'NNP', 'B-geo'),\n",
-              "  ('and', 'CC', 'O'),\n",
-              "  ('Africa', 'NNP', 'B-geo'),\n",
-              "  ('.', '.', 'O')],\n",
-              " [('Some', 'DT', 'O'),\n",
-              "  ('1,27,000', 'CD', 'O'),\n",
-              "  ('people', 'NNS', 'O'),\n",
-              "  ('are', 'VBP', 'O'),\n",
-              "  ('known', 'VBN', 'O'),\n",
-              "  ('dead', 'JJ', 'O'),\n",
-              "  ('.', '.', 'O')],\n",
-              " [('Aid', 'NNP', 'O'),\n",
-              "  ('is', 'VBZ', 'O'),\n",
-              "  ('being', 'VBG', 'O'),\n",
-              "  ('rushed', 'VBN', 'O'),\n",
-              "  ('to', 'TO', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('region', 'NN', 'O'),\n",
-              "  (',', ',', 'O'),\n",
-              "  ('but', 'CC', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('U.N.', 'NNP', 'B-geo'),\n",
-              "  ('official', 'NN', 'O'),\n",
-              "  ('stressed', 'VBD', 'O'),\n",
-              "  ('that', 'IN', 'O'),\n",
-              "  ('bottlenecks', 'NNS', 'O'),\n",
-              "  ('and', 'CC', 'O'),\n",
-              "  ('a', 'DT', 'O'),\n",
-              "  ('lack', 'NN', 'O'),\n",
-              "  ('of', 'IN', 'O'),\n",
-              "  ('infrastructure', 'NN', 'O'),\n",
-              "  ('remain', 'VBP', 'O'),\n",
-              "  ('a', 'DT', 'O'),\n",
-              "  ('challenge', 'NN', 'O'),\n",
-              "  ('.', '.', 'O')],\n",
-              " [('Lebanese', 'JJ', 'B-gpe'),\n",
-              "  ('politicians', 'NNS', 'O'),\n",
-              "  ('are', 'VBP', 'O'),\n",
-              "  ('condemning', 'VBG', 'O'),\n",
-              "  ('Friday', 'NNP', 'B-tim'),\n",
-              "  (\"'s\", 'POS', 'O'),\n",
-              "  ('bomb', 'NN', 'O'),\n",
-              "  ('blast', 'NN', 'O'),\n",
-              "  ('in', 'IN', 'O'),\n",
-              "  ('a', 'DT', 'O'),\n",
-              "  ('Christian', 'JJ', 'O'),\n",
-              "  ('neighborhood', 'NN', 'O'),\n",
-              "  ('of', 'IN', 'O'),\n",
-              "  ('Beirut', 'NNP', 'B-geo'),\n",
-              "  ('as', 'IN', 'O'),\n",
-              "  ('an', 'DT', 'O'),\n",
-              "  ('attempt', 'NN', 'O'),\n",
-              "  ('to', 'TO', 'O'),\n",
-              "  ('sow', 'VB', 'O'),\n",
-              "  ('sectarian', 'JJ', 'O'),\n",
-              "  ('strife', 'NN', 'O'),\n",
-              "  ('in', 'IN', 'O'),\n",
-              "  ('the', 'DT', 'O'),\n",
-              "  ('formerly', 'RB', 'O'),\n",
-              "  ('war-torn', 'JJ', 'O'),\n",
-              "  ('country', 'NN', 'O'),\n",
-              "  ('.', '.', 'O')]]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1235,37 +916,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_HPiK_DXDDm0",
-        "colab_type": "text"
-      },
-      "source": [
-        "!git remote add origin https://github.com/mansi1189/Natural-Language-Processing.git"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fA5dDuXqKXyx",
-        "colab_type": "text"
-      },
-      "source": [
-        "!git config --global user.email \"mansi.deolalikar@gmail.com\"\n",
-        "!git config --global user.name \"Mansi Deolalikar\""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "u3llZwa_Kxux",
-        "colab_type": "text"
-      },
-      "source": [
-        "\"\""
       ]
     }
   ]
